--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -109,11 +109,8 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-              <li>refurbishing or extending existing calf housing</li>
-              </ul>
-            <p class="govuk-body">A calf is up to 6 months of age.</p>
+          <p class="govuk-body">This grant is only for dairy and beef (including calf rearing) famers.</p>
+            
      </div>
    </div>
 
