--- a/app/views/ahw/current/farmer-type-fail.html
+++ b/app/views/ahw/current/farmer-type-fail.html
@@ -26,14 +26,8 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for:</p>
-        <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-          <li>refurbishing or extending existing calf housing</li>
-          </ul>
-
-          {{ govukInsetText({
-            text: "A calf is up to 6 months of age."
-          }) }}
+      <p class="govuk-body">This grant is only for dairy and beef (including calf rearing) famers.</p>
+    
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
       </div>
