--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -39,15 +39,15 @@ Type of farmer
 
                   items: [
                 {
-                  value: "Beef (including calf rearing) ",
-                  text: "Beef (including calf rearing) ",
-                  checked: checked("farmertype", "Beef (including calf rearing) ")
+                  value: "beef",
+                  text: "Beef (including calf rearing)",
+                  checked: checked("farmertype", "beef")
                 },
 
                 {
-                  value: "Dairy (including calf rearing)",
+                  value: "dairy",
                   text: "Dairy (including calf rearing)",
-                  checked: checked("farmertype", "Dairy (including calf rearing)")
+                  checked: checked("farmertype", "dairy")
                 },
                 {
                   value: "Pigs",
@@ -110,7 +110,7 @@ Type of farmer
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is only for dairy and beef (including calf rearing) famers.</p>
-            
+
      </div>
    </div>
 
