--- a/app/views/ahw/current/flooring-type-fail.html
+++ b/app/views/ahw/current/flooring-type-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">The calf housing must have solid concrete flooring.<p>
+      <p class="govuk-body">The calf housing must have solid concrete flooring and cereal straw bedding.<p>
 
         {{ govukInsetText({
           text: "It cannot have slatted or hardcore flooring."
