--- a/app/views/ahw/current/additional-items-fail.html
+++ b/app/views/ahw/current/additional-items-fail.html
@@ -30,6 +30,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>access to a water supply</li>
         <li>at least 2 IP66 electrical sockets in the building</li>
+        <li>fitted lighting of at least 50 lux (lux is equal to one lumen per square metre)</li>
         <li>temperature and humidity data loggers (capable of autonomously recording temperature/humidity over a defined period and storing data to view later)</li>
       </ul>
 
