--- a/app/views/ahw/current/additional-items.html
+++ b/app/views/ahw/current/additional-items.html
@@ -36,6 +36,7 @@ Additional items
                   hint: {
                     html: "The building must have:<br><br><li>access to a water supply</li>
                     <li>at least 2 IP66 electrical sockets in the building</li>
+                    <li>fitted lighting of at least 50 lux (lux is equal to one lumen per square metre)</li>
                     <li>temperature and humidity data loggers (capable of autonomously recording temperature/humidity over a defined period and storing data to view later)</li>"
 
                   },
@@ -70,7 +71,8 @@ Additional items
             <ul class="govuk-list govuk-list--bullet">
               <li>access to a water supply</li>
               <li>at least 2 IP66 electrical sockets in the building</li>
-              <li>temperature and humidity data loggers (capable of autonomously recording temperature/humidity over a defined period and storing data to view later)</li>
+              <li>fitted lighting of at least 50 lux</li>
+              <li>temperature and humidity data loggers</li>
             </ul>
             </div>
    </div>
