--- a/app/views/ahw/current/calf-weight.html
+++ b/app/views/ahw/current/calf-weight.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Calf weight
+Calf weight route
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@ Calf weight
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+  <a class="govuk-back-link" href="project-about">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -22,41 +22,51 @@ Calf weight
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukRadios({
-                  idPrefix: 'calfweight',
-                  name: 'calfweight',
-                  fieldset: {
-                      legend: {
-                          text: 'What will be the weight of the largest calf?',
-                          isPageHeading: yes,
-                          classes: 'govuk-fieldset__legend--l'
-                      }
-                  },
 
-                  hint: {
-                    text:"A calf is up to 6 months of age"
-                  },
 
-                  items: [
-                {
-                  value: "99",
-                  text: "100kg or under",
-                  checked: checked("calfweight", "99")
-                },
+        {{ govukRadios({
+          classes: "govuk-radios--inline",
+          name: "sqm1",
+          fieldset: {
+            legend: {
+              html: "Will each calf have the minimum living space?",
+              isPageHeading: true,
+              classes: "govuk-fieldset__legend--l"
+            }
+          },
+          hint: {
+            html: "The minimum space must be:<br><br>
+            <li>3m<sup>2</sup> per calf when largest calf is 100kg or under</li>
+            <li>4m<sup>2</sup> per calf when largest calf is between 100kg and 150kg</li>
+            <li>5m<sup>2</sup> per calf when largest calf is over 150kg</li><br>
+            This includes the lying, standing and feeding/drinking areas.
+            "
+          },
+          items: [
+          {
+            value: "yes",
+            text: "Yes",
+            checked: checked("sqm1", "yes")
+          },
+          {
+            value: "no",
+            text: "No",
+            checked: checked("sqm1", "no")
+          }
+          ]
+        }) }}
 
-                {
-                  value: "100 to 150",
-                  text: "Between 100kg and 150kg",
-                  checked: checked("calfweight", "100 to 150")
-                },
 
-                {
-                  value: "151",
-                  text: "Over 150kg",
-                  checked: checked("calfweight", "151")
-                }
-              ]
-              }) }}
+
+
+
+
+
+{{ govukWarningText({
+  text: "The required space-per-calf for each group or pair may change over time so the housing design should account for this.",
+  iconFallbackText: "Warning"
+}) }}
+
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
@@ -70,13 +80,14 @@ Calf weight
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
 
-          <p class="govuk-body">There must be a minimum floor area of:</p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>3m<sup>2</sup> per calf when largest calf is 100kg or under</li>
-              <li>4m<sup>2</sup> per calf when largest calf is between 100kg and 150kg</li>
-              <li>5m<sup>2</sup> per calf when largest calf is over 150kg</li>
-            </ul>
-            </div>
-   </div>
 
+          <p class="govuk-body">
+
+            Each calf must have at least the minimum living space.
+
+
+            </p>
+
+     </div>
+   </div>
 {% endblock %}
