--- a/app/views/ahw/current/innovation.html
+++ b/app/views/ahw/current/innovation.html
@@ -41,7 +41,7 @@ Sustainable materials
                   value: "Technology",
                   text: "Technology",
                   hint: {
-                    text: "For example, automated ventilation control systems, veterinary equipment"
+                    text: "Machinery or equipment that is new to your funded building. For example, automated ventilation control systems, veterinary equipment."
                   },
                   checked: checked("innovation", "technology")
                 },
@@ -49,7 +49,7 @@ Sustainable materials
                   value: "Collaboration",
                   text: "Collaboration",
                   hint: {
-                    text: "Collaborations that are new to your farm or build significantly on existing partnerships (for example, partnerships with educational institutions, other farms or the local community)"
+                    text: "Collaborations that are new to your farm or build significantly on existing partnerships. For example, partnerships with educational institutions, other farms, or the local community."
                   },
                   checked: checked("innovation", "collaboration")
                 },
@@ -57,7 +57,7 @@ Sustainable materials
                   value: "Techniques",
                   text: "Techniques",
                   hint: {
-                    text: "Techniques that improve stockperson’s skills or animal health and welfare (for example, the use of long-term analgesics for castration or disbudding)"
+                    text: "Techniques that improve stockperson skills or animal health and welfare. For example, the use of long-term analgesics for castration/disbudding."
                   },
                   checked: checked("innovation", "techniques")
                 },
