Floor sizes update

--- a/app/views/ahw/current/answers.html
+++ b/app/views/ahw/current/answers.html
@@ -114,7 +114,7 @@
       <td class="govuk-table__cell"><a href="group-size">Change</td>
     </tr>
 
-  
+
 
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Control building moisture
@@ -148,16 +148,19 @@
 
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Floor area
-      <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-          <li>{{ data['calf-floor-size'] }} m<sup>2</sup></li>
+      <br/><br/>100kg or under<ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+          <li>{{ data['100kg or under'] }} m<sup>2</sup></li>
         </ul>
+        Between 100 and 150kg<ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            <li>{{ data['Between 100 and 150kg'] }} m<sup>2</sup></li>
+          </ul>
     </th>
       <td class="govuk-table__cell">Average</td>
       <td class="govuk-table__cell">
         <p class="govuk-body govuk-!-font-size-16">
           Improve productivity</p>
       </td>
-    <td class="govuk-table__cell"><a href="floor-size">Change</td>
+    <td class="govuk-table__cell"><a href="floor-size3">Change</td>
     </tr>
 
     <tr class="govuk-table__row">
