--- a/app/views/ahw/current/floor-size3.html
+++ b/app/views/ahw/current/floor-size3.html
@@ -43,7 +43,6 @@ Floor sizes
                 },
                 id: "100kg or under",
                 name: "100kg or under",
-                inputmode: "numeric",
                 checked: checked("100kg or under", "100kg or under"),
                 spellcheck: false
               }) }}
@@ -63,12 +62,17 @@ Floor sizes
                 },
                 id: "Between 100 and 150kg",
                 name: "Between 100 and 150kg",
-                inputmode: "numeric",
                 checked: checked("Between 100 and 150kg", "Between 100 and 150kg"),
                 spellcheck: false
               }) }}
 
+
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
       </form>
