--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -109,7 +109,7 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is only for dairy and beef (including calf rearing) famers.</p>
+          <p class="govuk-body">This grant is only for dairy and beef (including calf rearing) farmers.</p>
 
      </div>
    </div>
