--- a/app/views/ahw/current/calf-weight-fail.html
+++ b/app/views/ahw/current/calf-weight-fail.html
@@ -26,11 +26,11 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Each calf must have the minimum living space:<Br>
+      <p class="govuk-body">Each calf must have the minimum floor area:<Br>
         <ul class="govuk-list govuk-list--bullet">
-        <li>3m<sup>2</sup> per calf when largest calf is 100kg or under</li>
-        <li>4m<sup>2</sup> per calf when largest calf is between 100kg and 150kg</li>
-        <li>5m<sup>2</sup> per calf when largest calf is over 150kg</li>
+          <li>3m<sup>2</sup> per calf for calves under 100kg</li>
+          <li>4m<sup>2</sup> per calf for calves between 100kg and 150kg</li>
+          <li>5m<sup>2</sup> per calf for calves over 150kg</li>
 
       </ul>
 
