--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -28,13 +28,13 @@ Solar
                   name: 'solar',
                   fieldset: {
                       legend: {
-                          text: 'Is the roof able to support solar PV panels?',
+                          text: 'Will the roof be able to support solar PV panels?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                    html: "Your roof is exempt if:<br><br>
+                    html: "Structural calculations by a building expert, contractor or structural engineer need to be provided at full application.<br><br>Your roof is exempt if:<br><br>
                     <li>the building is listed or on a world heritage site</li>
                     <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
                     <li>the roof faces only north or is heavily shaded</li>
@@ -73,18 +73,10 @@ Solar
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.<br><br>Structural calculations by a building expert, contractor or structural engineer need to be provided at full application.
+          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.<br><br>Costs for structural assessment and certification of a building’s capacity to support solar panels is funded.
           </p>
-          <details class="govuk-details" data-module="govuk-details">
-            <summary class="govuk-details__summary">
-              <span class="govuk-details__summary-text">
-                What the grant will fund
-              </span>
-            </summary>
-            <div class="govuk-details__text">
-              The cost of purchasing or installing solar PV panels is not funded by this grant.<br><br>Structural assessment and certification of a building’s capacity to structurally support solar panels is funded.
-            </div>
-          </details>
+
+
             </div>
    </div>
 
