--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -73,7 +73,7 @@ Solar
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.<br><br>Costs for structural assessment and certification of a building’s capacity to support solar panels is funded.
+          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.<br><br>Costs for structural assessment and certification of a building’s capacity to support solar panels is funded by the grant.
           </p>
 
 
