--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -34,7 +34,7 @@
           <span class="govuk-body govuk-!-font-size-14">#Last updated on 18 May 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>18 May 2023</strong>: Iterations (Issues 128 to 130 from Confluence) implemented based on Business requirements. Changes are planned to be tested during Private beta.</li>
+              <li><strong>1 June 2023</strong>: Iterations (Issues 128 to 130 from Confluence + Solar requirements) implemented based on Business requirements. Changes are planned to be tested during Private beta.</li>
               </ul>
               </p>
 
