--- a/app/views/ahw/current/project-cost.html
+++ b/app/views/ahw/current/project-cost.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         {{ govukWarningText({
-          text: "Costs for buying and installing rooftop solar PV panels must be less than 40% of the total grant amount.",
+          text: "You can use up to 40% of the total grant amount towards the cost of buying and installing rooftop solar PV panels.",
           iconFallbackText: "Warning"
         }) }}
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
