--- a/app/views/ahw/current/calf-weight.html
+++ b/app/views/ahw/current/calf-weight.html
@@ -82,7 +82,7 @@ Calf weight route
 
 
           <p class="govuk-body">
-            Each calf must have at least the minimum floor area.
+            Each calf must have at least the minimum floor area. <br><br>A calf is up to 6 months of age.
 
 
             </p>
