--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -23,7 +23,7 @@
         <p class='govuk-list app-list--definition'>
         <a href='ahw/v52t/start' class="govuk-link--no-visited-state">Start page</a><br>
         Using this link you will be routed into version 5.3 (shortend version) of the prototype.<br>
-        <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 June 2023<br/>
+        <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 July 2023<br/>
       </p>
 
       {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
@@ -38,11 +38,11 @@
         <h2 class="govuk-heading-l">Design history</h2><br>
 
         <p class='govuk-list app-list--definition'>
-          <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 5.2 (private beta) - current</strong></a><br>
-          <span class="govuk-body govuk-!-font-size-14">#Last updated on 14 June 2023
+          <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 5.3 (private beta) - current</strong></a><br>
+          <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 July 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>15 June 2023</strong>: Iterations (Issues 128 to 138 from Confluence + Solar requirements) implemented based on Business requirements. Changes are planned to be tested during Private beta.</li>
+              <li><strong>15 July 2023</strong>: Iterations (Issues 128 to 141 from Confluence + Solar requirements) implemented based on Business requirements. This version was tested in Round 4 of user testing and now moved into Private beta.</li>
               </ul>
               </p>
 
