--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -34,7 +34,7 @@ Solar
                       }
                   },
                   hint: {
-                    html: "You must provide confirmation from a building expert, contractor or structural engineer that your roof can support PV panels for your full application. Confirmation is not funded by this grant.<br><br>Your roof is exempt if:<br><br>
+                    html: "Confirmation by a building expert, contractor or structural engineer that your roof can support PV panels must be provided at full application.<br><br>Your roof is exempt if:<br><br>
                     <li>the building is listed or on a world heritage site</li>
                     <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
                     <li>the roof faces only north or is heavily shaded</li>
