--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -16,23 +16,7 @@
   Calf Housing for Health and Welfare Grant prototype admin
 </h1>
 
-      <div class="proto-admin">
-        <h2 class="govuk-heading-l">User research</h2>
-
-
-        <p class='govuk-list app-list--definition'>
-        <a href='ahw/v52t/start' class="govuk-link--no-visited-state">Start page</a><br>
-        Using this link you will be routed into version 5.3 (shortend version) of the prototype.<br>
-        <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 June 2023<br/>
-      </p>
-
-      {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
-
-      {{ govukWarningText({
-        text: "This is not the fully journey",
-        iconFallbackText: "Warning"
-      }) }}
-        </div>
+      
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2><br>
@@ -42,12 +26,22 @@
           <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 July 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>15 June 2023</strong>: Iterations (Issues 128 to 138 from Confluence + Solar requirements) implemented based on Business requirements. Changes are planned to be tested during Private beta.</li>
+              <li><strong>15 July 2023</strong>: Iterations (Issues 128 to 141 from Confluence) is now taken forward into Private beta.</li>
               </ul>
               </p>
 
 
             <p class='govuk-heading-m'>Previous versions</p>
+            <p class='govuk-list app-list--definition'>
+              <a href='/ahw/v52t/start' class="govuk-link--no-visited-state"><strong>Version 5.2</strong></a><br>
+              <span class="govuk-body govuk-!-font-size-14">#Last updated on 14 June 2023<br/>
+              <ul class="govuk-list govuk-list--bullet ">
+                <li><strong>14 June 2023</strong>: Iterations (Issues 128 to 138 from Confluence) implemented based on Business requirements. This version was tested in Round 4 of user testing. </li>
+                </ul>
+                {{ govukWarningText({
+                  text: "This is not the fully journey",
+                  iconFallbackText: "Warning"
+                }) }}
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v51/start' class="govuk-link--no-visited-state"><strong>Version 5.1</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14">#Last updated on 10 May 2023<br/>
