--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -17,7 +17,7 @@
 </h1>
 
       <div class="proto-admin">
-        <h2 class="govuk-heading-l">User research</h2>
+        <h2 class="govuk-heading-l">User research - test</h2>
 
         <p class='govuk-list app-list--definition'>
         <a href='slurrystorage/current/standardised-grant-amounts' class="govuk-link--no-visited-state" target="new">Standardised grant amounts page</a><br>
