--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,11 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="slurrystorage" class="govuk-lik govuk-link--no-visited-state">Slurry infrastructure grant</a>
+        </td>
+      <td class="govuk-table__cell">Checker (R2 version 1, last updated on 10 July 2023)</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
           Calf Housing for Health and Welfare Grant
         </a></td>
@@ -40,11 +45,7 @@
         </a></td>
       <td class="govuk-table__cell">Checker (R2 version 3, last updated on 23 February 2023)</td>
     </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurrystorage" class="govuk-lik govuk-link--no-visited-state">Slurry infrastructure grant</a>
-        </td>
-      <td class="govuk-table__cell">Checker (v4, last updated on 26 October 2022)</td>
-    </tr>
+
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="addingvalue" class="govuk-lik govuk-link--no-visited-state">Adding value grant</a>
         </td>
