--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -17,32 +17,28 @@
 </h1>
 
       <div class="proto-admin">
-        <h2 class="govuk-heading-l">User research - test</h2>
+        <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='slurrystorage/current/standardised-grant-amounts' class="govuk-link--no-visited-state" target="new">Standardised grant amounts page</a><br>
-          Mini-journey where users can choose project items based on their needs, followed by a built-in calculation which shows the total requested grant amount.</p>
+        <a href='#' class="govuk-link--no-visited-state" target="new">Start page</a><br>
+          Start your user research here</p>
 
-          <p class='govuk-list app-list--definition'>
-          <a href='slurrystorage/current/reference-number' class="govuk-link--no-visited-state" target="new">Confirmation page</a><br>
-            The final page where user is routed to, showing a reference number and summarizing what happens next. </p>
-
-          <h2 class="govuk-heading-m">A/B testing of Results page</h2>
-          <p class='govuk-list app-list--definition'>
-                      <a href='slurrystorage/current/answers2' class="govuk-link--no-visited-state" target="new">Results page (version 1)</a><br>
-                         Showing results of the eligibility checker</p>
-
-        <p class='govuk-list app-list--definition'>
-         <a href='slurrystorage/current/answers' class="govuk-link--no-visited-state" target="new">Results page (version 2)</a><br>
-            Showing results of the eligibility checker</p>
-        </div>
+</div>
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-
         <p class='govuk-list app-list--definition'>
-          <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Version 4 (current)</a></strong><br>
-          This version was not tested with users yet. (Issues 137 to 206.)<br>
+          <a href='# class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
+          This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-2076' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
+            <span class="govuk-body govuk-!-font-size-14"># Last updated on 10 July 2023<br/>
+            </span></p>
+
+
+
+            <p class='govuk-heading-m'>Previous versions</p>
+        <p class='govuk-list app-list--definition'>
+          <a href='slurrystorage/v4/start' class="govuk-link--no-visited-state"><strong>Round 1: version 4 (public beta)</a></strong><br>
+          This version (including issues 137 to 206 from Confluence) was tested during Round 4 and was the final version (public beta). <br>
             <span class="govuk-body govuk-!-font-size-14">#Last updated on 26 October 2022<br/>
             </span></p>
 
@@ -70,9 +66,23 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
 
-            <p class='govuk-heading-m'>Wireframes</p>
+        
+
+        <p class='govuk-heading-m'>Mural - R2: v1 </p>
+          <p class='govuk-list app-list--definition'>
+            <a href='https://www.sketch.com/s/0ba7b7d0-419a-4415-bf66-f8c4b23053cf' class="govuk-link--no-visited-state" target="new" >Design thinking: Slurry 2023 (opens in new tab)</a><br>
+              <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17">Mural: work in progress (visitor link).</p>
+
+
+        <p class='govuk-heading-m'>Wireframes - R2: v1 </p>
+          <p class='govuk-list app-list--definition'>
+            <a href='https://www.sketch.com/s/0ba7b7d0-419a-4415-bf66-f8c4b23053cf' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
+              <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (Always up-to date).</p>
+
+
+            <p class='govuk-heading-m'>Wireframes - R1: v4 (public beta)</p>
               <p class='govuk-list app-list--definition'>
-                <a href='https://www.sketch.com/s/a46cf24a-95d6-498b-8014-5bf68c7ad9f1/p/1BC1950D-21A6-4824-A1CF-F59BEE523729' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
+                <a href='https://www.sketch.com/s/a46cf24a-95d6-498b-8014-5bf68c7ad9f1' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
                   <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (Always up-to date).</p>
       </div>
 {% endblock %}
