--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -28,7 +28,7 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
         <p class='govuk-list app-list--definition'>
-          <a href='# class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
+          <a href='#'' class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
           This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-2076' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
             <span class="govuk-body govuk-!-font-size-14"># Last updated on 10 July 2023<br/>
             </span></p>
@@ -66,7 +66,7 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
 
-        
+
 
         <p class='govuk-heading-m'>Mural - R2: v1 </p>
           <p class='govuk-list app-list--definition'>
